2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/navigation-tree.c:
	  - Implement a couple more loose ends from the navtree rework.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Open existing channels/queries when clicking on them in the
	    conversation panel.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/common/fe.h:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/irc-network.c:
	* src/fe-gnome/gui.c:
	* src/fe-gnome/topic-label.c:
	* src/fe-gnome/connect-dialog.c:
	* src/fe-gnome/userlist.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Merge r10989:11029 from navtree-rework branch.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* plugins/notify-osd/notify-osd.c:
	  - "Xchat OSD" -> "XChat-GNOME OSD"

2006-12-08  Guillaume Desmottes <cass@skynet.be>

	D src/fe-gnome/channel-list.c:
	A src/fe-gnome/channel-list-window.c:
	D src/fe-gnome/channel-list.h:
	A src/fe-gnome/channel-list-window.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* src/fe-gnome/Makefile.am:
	* data/channel-list.glade:
	* NEWS
	  - GObjectize the channel list window
	  - Rename it to be more "GObject spirit"
	  - New sexy design of the channel list window

	* src/fe-gnome/apps_xchat.schemas.in:
	* src/fe-gnome/fe-gnome.c:
	  - Add a gconf key disabling the auto popup of the
	    channel list window.

2006-11-26  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Fix a potential crash in a bizzare edge case.  Fix your
	    scrollback configuration! (#367953).

2006-11-26  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	  - Fix a potential crasher, maybe. (#372871)
