@@ -1,122 +1,114 @@
 <ui>
 	<menubar>
 		<menu name="IRCMenu" action="IRC">
-			<menuitem name="IRCConnectItem" action="IRCConnect"/>
+			<menuitem name="IRCConnect" action="IRCConnect"/>
 			<separator name="IRCSep0"/>
-			<menuitem name="IRCDownloadsItem" action="IRCDownloads"/>
+			<menuitem name="IRCDownloads" action="IRCDownloads"/>
 			<separator name="IRCSep1"/>
-			<menuitem name="IRCQuitItem" action="IRCQuit"/>
+			<menuitem name="IRCQuit" action="IRCQuit"/>
 		</menu>
 
 		<menu name="EditMenu" action="Edit">
-			<menuitem name="EditCutItem" action="EditCut"/>
-			<menuitem name="EditCopyItem" action="EditCopy"/>
-			<menuitem name="EditPasteItem" action="EditPaste"/>
+			<menuitem name="EditCut" action="EditCut"/>
+			<menuitem name="EditCopy" action="EditCopy"/>
+			<menuitem name="EditPaste" action="EditPaste"/>
 			<separator name="EditSep0"/>
-			<menuitem name="EditPreferencesItem" action="EditPreferences"/>
+			<menuitem name="EditPreferences" action="EditPreferences"/>
 		</menu>
 
 		<menu name="NetworkMenu" action="Network">
-			<menuitem name="NetworkReconnectItem" action="NetworkReconnect"/>
-			<menuitem name="NetworkDisconnectItem" action="NetworkDisconnect"/>
-			<menuitem name="NetworkCloseItem" action="NetworkClose"/>
+			<menuitem name="NetworkReconnect" action="NetworkReconnect"/>
+			<menuitem name="NetworkDisconnect" action="NetworkDisconnect"/>
+			<menuitem name="NetworkClose" action="NetworkClose"/>
 			<separator name="NetworkSep1"/>
-			<menuitem name="NetworkChannelsItem" action="NetworkChannels"/>
+			<menuitem name="NetworkChannels" action="NetworkChannels"/>
 		</menu>
 
 		<menu name="DiscussionMenu" action="Discussion">
-			<menuitem name="DiscussionSaveItem" action="DiscussionSave"/>
+			<menuitem name="DiscussionSave" action="DiscussionSave"/>
 			<separator name="DiscussionSep0"/>
-			<menuitem name="DiscussionLeaveItem" action="DiscussionLeave"/>
-			<menuitem name="DiscussionCloseItem" action="DiscussionClose"/>
+			<menuitem name="DiscussionLeave" action="DiscussionLeave"/>
+			<menuitem name="DiscussionJoin" action="DiscussionJoin"/>
+			<menuitem name="DiscussionClose" action="DiscussionClose"/>
 			<separator name="DiscussionSep1"/>
-			<menuitem name="DiscussionFindItem" action="DiscussionFind"/>
+			<menuitem name="DiscussionFind" action="DiscussionFind"/>
 			<separator name="DiscussionSep3"/>
-			<menuitem name="DiscussionChangeTopicItem" action="DiscussionChangeTopic"/>
-			<menuitem name="DiscussionBansItem" action="DiscussionBans"/>
-			<menuitem name="DiscussionUsersItem" action="DiscussionUsers"/>
+			<menuitem name="DiscussionChangeTopic" action="DiscussionChangeTopic"/>
+			<menuitem name="DiscussionBans" action="DiscussionBans"/>
+			<menuitem name="DiscussionUsers" action="DiscussionUsers"/>
 		</menu>
 
 		<menu name="GoMenu" action="Go">
-			<menuitem name="GoPreviousNetworkItem" action="GoPreviousNetwork"/>
-			<menuitem name="GoNextNetworkItem" action="GoNextNetwork"/>
+			<menuitem name="GoPreviousNetwork" action="GoPreviousNetwork"/>
+			<menuitem name="GoNextNetwork" action="GoNextNetwork"/>
 			<separator name="GoSep0"/>
-			<menuitem name="GoPreviousDiscussionItem" action="GoPreviousDiscussion"/>
-			<menuitem name="GoNextDiscussionItem" action="GoNextDiscussion"/>
+			<menuitem name="GoPreviousDiscussion" action="GoPreviousDiscussion"/>
+			<menuitem name="GoNextDiscussion" action="GoNextDiscussion"/>
 		</menu>
 
 		<menu name="HelpMenu" action="Help">
-			<menuitem name="HelpContentsItem" action="HelpContents"/>
-			<menuitem name="HelpAboutItem" action="HelpAbout"/>
+			<menuitem name="HelpContents" action="HelpContents"/>
+			<menuitem name="HelpAbout" action="HelpAbout"/>
 		</menu>
 
 	</menubar>
 
 	<popup name="UserlistPopup" action="PopupAction">
-		<menuitem name="UserlistSendFileItem" action="UserlistSendFile"/>
-		<menuitem name="UserlistOpenDialogItem" action="UserlistOpenDialog"/>
-		<menuitem name="UserlistKickItem" action="UserlistKick"/>
-		<menuitem name="UserlistBanItem" action="UserlistBan"/>
-		<menuitem name="UserlistIgnoreItem" action="UserlistIgnore"/>
-		<menuitem name="UserlistOpItem" action="UserlistOp"/>
+		<menuitem name="UserlistSendFile" action="UserlistSendFile"/>
+		<menuitem name="UserlistOpenDialog" action="UserlistOpenDialog"/>
+		<menuitem name="UserlistKick" action="UserlistKick"/>
+		<menuitem name="UserlistBan" action="UserlistBan"/>
+		<menuitem name="UserlistIgnore" action="UserlistIgnore"/>
+		<menuitem name="UserlistOp" action="UserlistOp"/>
 	</popup>
 
 	<popup name="UserDialogPopup" action="PopupAction">
-		<menuitem name="UserlistSendFileItem" action="UserlistSendFile"/>
-		<menuitem name="UserlistIgnoreItem" action="UserlistIgnore"/>
+		<menuitem name="UserlistSendFile" action="UserlistSendFile"/>
+		<menuitem name="UserlistIgnore" action="UserlistIgnore"/>
 	</popup>
 
-        <popup name="NetworkPopup" action="PopupAction">
-                <menuitem name="NetworkReconnect" action="NetworkReconnect"/>
+	<popup name="NetworkPopup" action="PopupAction">
+		<menuitem name="NetworkReconnect" action="NetworkReconnect"/>
 		<menuitem name="NetworkDisconnect" action="NetworkDisconnect"/>
 		<menuitem name="NetworkClose" action="NetworkClose"/>
 		<menuitem name="NetworkAutoConnect" action="NetworkAutoConnect"/>
-                <separator name="NetworkPopupSep1"/>
-                <menuitem name="NetworkChannels" action="NetworkChannels"/>
-        </popup>
+		<separator name="NetworkPopupSep1"/>
+		<menuitem name="NetworkChannels" action="NetworkChannels"/>
+	</popup>
 
-        <popup name="ChannelJoinedPopup" action="PopupAction">
-                <menuitem name="DiscussionSave" action="DiscussionSave"/>
-                <separator name="ChannelSep0"/>
-                <menuitem name="DiscussionLeave" action="DiscussionLeave"/>
-                <menuitem name="DiscussionClose" action="DiscussionClose"/>
-		<menuitem name="DiscussionAutoJoin" action="DiscussionAutoJoin"/>
-                <separator name="DiscussionSep1"/>
-                <menuitem name="DiscussionFind" action="DiscussionFind"/>
-                <separator name="DiscussionSep2"/>
-                <menuitem name="DiscussionBans" action="DiscussionBans"/>
-        </popup>
-
-	<popup name="ChannelUnjoinedPopup" action="PopupAction">
+	<popup name="ChannelPopup" action="PopupAction">
 		<menuitem name="DiscussionSave" action="DiscussionSave"/>
-		<separator name="DiscussionSep0"/>
-		<menuitem name="DiscussionJoin" action="DiscussionJoin"/>
+		<separator name="ChannelSep0"/>
+		<menuitem name="DiscussionLeave" action="DiscussionLeave"/>
 		<menuitem name="DiscussionClose" action="DiscussionClose"/>
+		<menuitem name="DiscussionJoin" action="DiscussionJoin"/>
 		<menuitem name="DiscussionAutoJoin" action="DiscussionAutoJoin"/>
 		<separator name="DiscussionSep1"/>
 		<menuitem name="DiscussionFind" action="DiscussionFind"/>
+		<separator name="DiscussionSep2"/>
+		<menuitem name="DiscussionBans" action="DiscussionBans"/>
 	</popup>
 
-        <popup name="DialogPopup" action="PopupAction">
+	<popup name="DialogPopup" action="PopupAction">
 		<menuitem name="DialogSendFile" action="UserlistSendFile"/>
 		<menuitem name="DialogIgnore" action="UserlistIgnore"/>
-                <separator name="DialogSep0"/>
-                <menuitem name="DiscussionSave" action="DiscussionSave"/>
-                <separator name="DialogSep0"/>
-                <menuitem name="DiscussionClose" action="DiscussionClose"/>
-                <separator name="DialogSep1"/>
-                <menuitem name="DiscussionFind" action="DiscussionFind"/>
-        </popup>
+		<separator name="DialogSep0"/>
+		<menuitem name="DiscussionSave" action="DiscussionSave"/>
+		<separator name="DialogSep0"/>
+		<menuitem name="DiscussionClose" action="DiscussionClose"/>
+		<separator name="DialogSep1"/>
+		<menuitem name="DiscussionFind" action="DiscussionFind"/>
+	</popup>
 
-        <popup name="TextURLPopup" action="PopupAction">
-                <menuitem name="TextURLOpen" action="TextURLOpen"/>
-                <menuitem name="TextURLCopy" action="TextURLCopy"/>
-        </popup>
+	<popup name="TextURLPopup" action="PopupAction">
+		<menuitem name="TextURLOpen" action="TextURLOpen"/>
+		<menuitem name="TextURLCopy" action="TextURLCopy"/>
+	</popup>
 
-        <popup name="TextEmailPopup" action="PopupAction">
-                <menuitem name="TextEmailSend" action="TextEmailSend"/>
-                <menuitem name="TextEmailCopy" action="TextEmailCopy"/>
-        </popup>
+	<popup name="TextEmailPopup" action="PopupAction">
+		<menuitem name="TextEmailSend" action="TextEmailSend"/>
+		<menuitem name="TextEmailCopy" action="TextEmailCopy"/>
+	</popup>
 
 	<popup name="DropFilePopup" action="PopupAction">
 		<menuitem name="DropSendFiles" action="DropSendFiles"/>
