@@ -1,3 +1,14 @@
+2006-12-10  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/navigation-tree.h:
+	* src/fe-gnome/conversation-panel.c:
+	* src/fe-gnome/main-window.c:
+	* src/fe-gnome/gui.c:
+	* src/fe-gnome/gui.h:
+	* src/fe-gnome/navigation-tree.c:
+	* data/xchat-gnome-ui.xml:
+	  - Set action sensitivity correctly.
+
 2006-12-09  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/fe-gnome.c:
